--- a/css/about_style.css
+++ b/css/about_style.css
@@ -63,7 +63,7 @@ nav ul a {
 	padding: 0.3125em 0.75em; /* 5/16 and 12/16 */
 }
 
-nav ul li a:visited,
+nav ul li a:active,
 nav ul li a:hover,
 nav ul li a:focus {
 	color: #1f1b21;
